[package]
name = "chust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
argon2 = { version = "0.5.0"}

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enabling serialization and deserialization for serde's UUIDs
]

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["async-std-runtime"]
